<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>

    <!--Brian Strings-->
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="quantity">Quantity</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank You!</string>

    <!--Name for the order summary. It will be shown in the format of "Name: Elaine" where Elaine is the user's name. [CHAR LIMIT = NONE]-->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Elaine">%s</xliff:g></string>

</resources>
