<?xml version="1.0" encoding="utf-8"?>


<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coffee_background"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Name-->
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:paddingBottom="16dp" />

        <!--Text: Toppings-->
        <TextView
            style="@style/header_style"
            android:text="@string/toppings"
            android:textAllCaps="true" />

        <!--Whipped cream checkbox-->
        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:textStyle="italic" />

        <!--Chocolate checkbox, style from resource values-->
        <CheckBox
            android:id="@+id/chocolate_checkbox"
            style="@style/topping_style"
            android:text="@string/chocolate" />

        <!--Text: Quantity-->
        <TextView
            android:id="@+id/quantity"
            style="@style/header_style"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Minus Button-->
            <Button
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="minusButton"
                android:text="-" />

            <!--Actual Quantity-->
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="1"
                android:textColor="#000000"
                android:textSize="16sp" />

            <!--Plus Button-->
            <Button
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="plusButton"
                android:text="+" />

        </LinearLayout>

        <!--Price Text-->
        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="$ 0"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!--Order Button-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="@string/order" />

        <TextView
            android:id="@+id/orderSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" " />

    </LinearLayout>


</ScrollView>
